Project scope reduction

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -59,12 +59,12 @@
                                 </span>
                             </button>
                         </div>
-                        <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+                        <!-- <div class="dropdown-menu" id="dropdown-menu4" role="menu">
                             <div class="dropdown-content">
                                 <a class="dropdown-item is-active"> All</a>
                                 <a class="dropdown-item"> Archived </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <!--End: Dropdown-->
 
@@ -153,8 +153,7 @@
 
                         <!--START: Input field-->
                         <div class="field has-addons">
-                            <div class="control">
-                                <!--Dropup-->
+                            <!-- <div class="control">
                                 <div class="dropdown post-options is-hoverable is-up">
                                     <div class="dropdown-trigger">
                                         <button class="button" aria-haspopup="true" aria-controls="dropdown-menu-post">
@@ -175,8 +174,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!--END: Dropup-->
-                            </div>
+                            </div> -->
                             <div class="control is-expanded">
                                 <form method="POST" style="width: 100%;"
                                     action="{{ url_for('chat_room', room_id=selected_chatroom) }}">
