--- a/templates/customer/book-now.html
+++ b/templates/customer/book-now.html
@@ -16,7 +16,7 @@
                     <!--START: Customise tour button-->
                     <div class="field">
                         <div class="control">
-                            <a href="{{ url_for('checkout') }}">
+                            <a href="">
                                 <button class="button is-medium is-fullwidth is-success">
                                     <p class="has-text-weight-semibold">Customise Tour</p>
                                 </button>
