--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -16,7 +16,7 @@
     <section class='section mb-0 pb-0'>
         <div class="container mt-5 p-5">
             <a href="{{ url_for('all_bookings') }}"><i class="fas fa-chevron-left"></i>&ensp;Back to Bookings</a>
-            <h1 class="title is-size-1 m-0">Bishan Nightlife</h1>
+            <h1 class="title is-size-1 m-0">hi</h1>
             <!--START: More options dropdown-->
             <div class="dropdown post-options is-hoverable is-right is-pulled-right">
                 <div class="dropdown-trigger">
