--- a/templates/customer/checkout.html
+++ b/templates/customer/checkout.html
@@ -12,11 +12,15 @@
     <section class="section">
         <div class="container">
             Placeholder check-out page until Stripe is implemented.
+            <form id="payment" method="POST" action="{{ url_for('checkout', book_id=book_id) }}">
+                <!-- {{ form.csrf_token }} -->
             <div class="control">
-                <a href="{{ url_for('bookings') }}">
-                    <button class="button is-primary">Pay & Proceed</button>
+                <!-- {{ form.submit(id="submit", class="button is-primary", type="submit") }} -->
+                <a href="">
+                    <button type="submit" id="pay_submit" class="button is-primary">Pay & Proceed</button>
                 </a>
             </div>
+            </form>
         </div>
     </section>
 {% endblock %}
