--- a/templates/tourGuides/makelisting.html
+++ b/templates/tourGuides/makelisting.html
@@ -114,7 +114,7 @@
                                           <i class="fas fa-upload"></i>
                                         </span>
                                         <span class="file-label">
-                                          Choose a file…
+                                          Upload an Image...
                                         </span>
                                       </span>
                                       <span class="file-name" id='filename-tour-img'>
