--- a/templates/customer/index-customer.html
+++ b/templates/customer/index-customer.html
@@ -28,7 +28,7 @@
                         <a href='/discover/{{ listings[-1]["_id"] }}'>
                             <div class="ml-4">
                                 <div class="mb-2 listing-author">
-                                    <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                    <div class="profile-img" style="background-image: url('data:image/jpeg;base64, ${listings[-1]['tg_img'] }') ;"></div>
                                     <div class="ml-2"><b>{{ listings[-1]['tg_name'] }}</b> is offering:</div>
                                 </div>
                                 <h1 class='title'> {{ listings[-1].tour_name }}</h1>
@@ -74,7 +74,7 @@
                                          style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}');"></div>
                                     <div class="ml-4">
                                         <div class="mb-2 listing-author">
-                                            <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                                            <div class="profile-img" style="background-image: url('data:image/jpeg;base64, ${item['tg_img'] }') ;"></div>
                                             <div class="ml-2"><b>{{ item['tg_name'] }}</b> is offering:</div>
                                         </div>
                                         <h1 class='title is-4'>{{ item["tour_name"] }}</h1>
